infrastructure/config/personal-website/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: personal-website
  labels:
    app.kubernetes.io/name: personal-website
    app.kubernetes.io/managed-by: flux
