infrastructure/config/personal-website/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: personal-website
  namespace: personal-website
  labels:
    app.kubernetes.io/name: personal-website
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 3000
      name: http
  selector:
    app.kubernetes.io/name: personal-website
